Upload milestone 3 via Terminal